test.html chenged

--- a/src/test.html
+++ b/src/test.html
@@ -2,8 +2,12 @@
 
 <html>
     <head>
-        <title>Привет!!!</title>>
+        <title>Здравствуй!!!</title>>
     </head>
 
-    <body>Как дела?</body>>
+    <body>
+    <h>Как дела?</h>>
+    <p>Что нового?</p>>
+    </body>>
+
 </html>
