--- a/src/test.html
+++ b/src/test.html
@@ -2,7 +2,9 @@
 
 <html>
     <head>
-        <title>Здравствуй!!!</title>>
+        <title>Здравствуй!!!</title>
+
+        <meta charset="utf-8">
     </head>
 
     <body>
